Fixed overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,7 +16,7 @@ body {
   text-decoration: none;
   text-align: center;
   position: relative;
-  transition: all .35s;
+  transition: all 0.35s;
 }
 
 .button-animation span {
@@ -31,8 +31,8 @@ body {
   left: 0;
   width: 0;
   height: 100%;
-  background: #62D2A2;
-  transition: all .35s;
+  background: #62d2a2;
+  transition: all 0.35s;
 }
 
 .button-animation:hover {
@@ -41,4 +41,21 @@ body {
 
 .button-animation:hover:after {
   width: 100%;
+}
+
+.mouse-pet {
+  transition: width 0.5s, height 0.5s;
+  overflow-y: hidden !important;
+  overflow-x: hidden !important;
+  * {
+    overflow-y: hidden !important;
+    overflow-x: hidden !important;
+  }
+  span {
+    display: none;
+  }
+}
+
+.mouse-pet-hover span {
+  display: block;
 }
